--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>Git Cheatsheet</title>
-	<link rel="stylesheet" href="css/960.css" type="text/css" />
+	<link rel="stylesheet" href="stylesheets/960.css" type="text/css" />
 	<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js' lang='text/javascript' /></script>
 	<script lang="text/javascript">
 var commands = [
