pull out css into its own file

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>Git Cheatsheet</title>
 	<link rel="stylesheet" href="stylesheets/960.css" type="text/css" />
+	<link rel="stylesheet" href="stylesheets/git-cheatsheet.css" type="text/css" />
 	<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js' lang='text/javascript' /></script>
 	<script lang="text/javascript">
 var commands = [
@@ -110,241 +111,6 @@ $(function() {
 });
 
 	</script>
-	<style>
-	
-	/* colors: http://colorschemedesigner.com/#0051Tw0w0w0w0 */
-	html, body {
-		font-family: verdana;
-		font-size: 14px;
-		background-color: #eee;
-	}
-	#diagram {
-		position: relative;
-		height: 8in;
-		background-color: #eee;
-		padding: 1px 0;
-	}
-	
-	.loc {
-		position: relative;
-		height: 100%;
-		background-color: white;
-	}
-	.loc .bar {
-		position: absolute;
-		left: 45%;
-	    top: 50px;
-		border: 1px dashed white;
-		border-top: none;
-		width: 10px;
-		height: 90%;	
-	}
-	
-	.loc label {
-	    position: absolute;
-	    top: 0px;
-		width: 100%;
-		text-align: center;
-		padding: 20px 0;
-		color: white;
-		font-weight: bold;
-	}
-	
-	.loc ul {
-		margin: 0;
-		padding: 0;
-		margin-top: 80px;
-	}
-	
-	.loc ul li {
-		margin: 0;
-		padding: 0;
-	    display: block;
-	    list-style: none;
-		border: 1px solid gray;
-		padding: 2px 5px;
-		background-color: #999;
-		margin: 5px 20px;
-		clear: left;
-		font-size: 10px;
-		opacity: 0.5;
-	}
-	
-	.loc p {
-		bottom: 30px;
-		position: absolute;
-		padding: 0 20px;
-		font-size: 10px;
-		color: white;
-	}
-	
-	#stash {
-		background-color: #bf3030;
-	}
-	body.stash #stash {
-		background-color: #a60000;
-	}
-	#stash .bar {
-		border-color: #ff7373;
-	}
-	#workspace {
-		background-color: #ff4040;
-	}
-	body.workspace #workspace {
-		background-color: #ff0000;
-	}
-	#workspace .bar {
-		border-color: #ff7373;
-	}
-	#index {
-		background-color: #ff9640;
-	}
-	body.index #index {
-		background-color: #ff7400;
-	}
-	#index .bar {
-		border-color: #ff9640;
-		border-color: #ffb273;
-	}
-	#local_repo {
-		background-color: #e6399b;
-		background-color: #992667;
-		background-color: #cd0074;
-	}
-	body.local_repo #local_repo {
-		background-color: #85004b;
-	}
-	#local_repo .bar {
-		border-color: #e6399b;
-	}
-	#remote_repo {
-		background-color: #bf3030;
-	}
-	body.remote_repo #remote_repo {
-		background-color: #a60000;
-	}
-	#remote_repo .bar {
-		border-color: #bf3030;
-		border-color: #ff7373;
-	}
-
-
-	#commands {
-		position: absolute;
-		top: 80px;
-		left: 0px;
-		width: 100%;
-		height: 0;
-	}
-	
-	#commands>div {
-		background-color: darkblue;
-		color: #ddd;
-		margin-bottom: 2px;
-		float: left;
-	    clear: left;
-		padding: 2px 5px;
-		font-style: italic;
-		font-family: sans-serif;
-		position: relative;
-		opacity: 0.3;
-	}
-	
-	#commands>div span.docs {
-		display: none;
-		-moz-box-shadow: 1px 1px 10px #992667;
-	}
-	
-	#commands>div:hover {
-		opacity: 1;
-		cursor: pointer;
-		-moz-box-shadow: 1px 1px 10px #992667;
-	}
-	
-	#commands>div:hover span.docs {
-		display: block;
-		position: absolute;
-		background-color: inherit;
-		padding: 5px 5px 25px 5px;
-		left: 100%;
-		top: 0;
-		opacity: 1;
-		z-index: 100;
-		line-height: 1.3em;
-		width: 210px;
-		color: #992667;
-		background-color: white;
-	}
-	
-	
-	#commands>div:first-line {
-		font-style: normal;
-	}
-	
-	
-	#commands>div.up {
-		background-color: #992667;
-		color: #85004b;
-		color: #e667af;
-		color: white;
-	}
-	#commands>div.up>.arrow {
-		width: 0;
-		height: 0;
-		border: 9px solid transparent;
-		border-left-color: #992667;
-		position: absolute;
-		right: -18px;
-		top: 0;
-	
-	}
-
-	#commands>div.dn {
-		background-color: #e6399b;
-		color: #85004b;
-	}
-	#commands>div.dn>.arrow {
-		width: 0;
-		height: 0;
-		border: 9px solid transparent;
-		border-right-color: #e6399b;
-		position: absolute;
-		left: -18px;
-		top: 0;
-	
-	}
-
-	#commands>div.status {
-		background-color: #a64b00;
-		color: #ffb273;
-	}
-	
-	#commands>div:before {
-		content: "git ";
-	}
-	
-	
-	body.stash #commands>div.stash {
-		opacity: 1.0;
-	}
-
-	body.workspace #commands>div.workspace {
-		opacity: 1.0;
-	}
-
-	body.index #commands>div.index {
-		opacity: 1.0;
-	}
-
-	body.local_repo #commands>div.local_repo {
-		opacity: 1.0;
-	}
-
-	body.remote_repo #commands>div.remote_repo {
-		opacity: 1.0;
-	}
-
-	</style>
 </head>
 <body class="stash workspace index local_repo remote_repo">
 <div  id="diagram" class="container_12">
