--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,16 @@
     <script src='/javascripts/git-cheatsheet.js' type="text/javascript"></script>
 </head>
 <body class=""><!-- stash workspace index local_repo remote_repo -->
+<div id="hd" class="container_16">
+    <h1 class="grid_8 alpha">Git Cheatsheet</h1>
+    <div class="grid_8 omega">
+        <h2><a href="http://ndpsoftware.com">visualization from NDP Software</a></h2>
+        <h6>(c) Andrew Peterson 2009-2010 All Rights Reserved.</h6>
+    </div>
+</div>
+<div class="clear" ></div>
 <div id="diagram" class="container_16">
-    <div id="stash" class="loc grid_2"><label>stash</label></div>
+    <div id="stash" class="loc grid_2 alpha"><label>stash</label></div>
     <div id="workspace" class="loc grid_4"><label>workspace</label></div>
     <div id="index" class="loc grid_3 "><label>index</label>
 
@@ -20,7 +28,7 @@
             snapshot that is taken as the
             contents of the next
             commit.</p></div>
-    <div id="local_repo" class="loc grid_3"><label>local repository</label>
+    <div id="local_repo" class="loc grid_4"><label>local repository</label>
 
         <p>
             Typical branches:
@@ -30,14 +38,21 @@
             <em>feature2</em>
         </p>
     </div>
-    <div id="remote_repo" class="loc grid_4"><label>upstream repository</label>
+    <div id="remote_repo" class="loc grid_3 omega"><label>upstream repository</label>
+
         <p>Default: origin<br/>Typical branches:
-        <em>master</em>
+            <em>master</em>
             <em>shared_branch</em>
         </p>
     </div>
     <div id="commands">
     </div>
+    <div class="clear"></div>
+    <div class="grid_2 alpha">&nbsp;</div>
+    <div id="info" class="grid_12">
+
+    </div>
+    <div class="grid_2 omega">&nbsp;</div>
 </div>
 </body>
 </html>
