--- a/public/index.html
+++ b/public/index.html
@@ -10,49 +10,40 @@
     <script src='/javascripts/styles.js'></script>
     <script src='/javascripts/git-cheatsheet.js' type="text/javascript"></script>
 </head>
-<body class=""><!-- stash workspace index local_repo remote_repo -->
+<body class="">
+<!-- stash workspace index local_repo remote_repo -->
 <div id="hd" class="container_16">
-    <h1 class="grid_8 alpha">Git Cheatsheet</h1>
+    <h1 class="grid_8 alpha" data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
+
     <div class="grid_8 omega">
-        <h2><a href="http://ndpsoftware.com">visualization from NDP Software</a></h2>
+        <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">visualization
+            from NDP Software</a></h2>
         <h6>(c) Andrew Peterson 2009-2010 All Rights Reserved.</h6>
     </div>
 </div>
-<div class="clear" ></div>
+<div class="clear"></div>
 <div id="diagram" class="container_16">
     <div id="stash" class="loc grid_2 alpha"><label>stash</label></div>
     <div id="workspace" class="loc grid_4"><label>workspace</label></div>
-    <div id="index" class="loc grid_3 "><label>index</label>
-
-        <p>The "index"-- or "staging area"-- holds a snapshot of the content of the working tree, and it is this
-            snapshot that is taken as the
-            contents of the next
-            commit.</p></div>
-    <div id="local_repo" class="loc grid_4"><label>local repository</label>
-
-        <p>
-            Typical branches:
-            <em>master</em>
-            <em>local_branch</em>
-            <em>feature1</em>
-            <em>feature2</em>
-        </p>
+    <div id="index" class="loc grid_3"
+         data-docs='The "index"-- or "staging area"-- holds a snapshot of the content of the working tree, and it is this snapshot that is taken as the contents of the next commit.'>
+        <label>index</label>
     </div>
-    <div id="remote_repo" class="loc grid_3 omega"><label>upstream repository</label>
-
-        <p>Default: origin<br/>Typical branches:
-            <em>master</em>
-            <em>shared_branch</em>
-        </p>
+    <div id="local_repo" class="loc grid_4"
+         data-docs="Typical branches: master, dev (for local development), feature_x, bugfix_y"
+            ><label>local repository</label>
+    </div>
+    <div id="remote_repo" class="loc grid_3 omega"
+         data-docs="Default is 'origin'. Typical branches here: master, shared_feature_x, release_y"
+            ><label>upstream repository</label>
     </div>
     <div id="commands">
     </div>
     <div class="clear"></div>
-    <div class="grid_2 alpha">&nbsp;</div>
-    <div id="info" class="grid_12">
-
+    <div id="info">
+        <div class="grid_4 alpha cmd">&nbsp;</div>
+        <div class="grid_12 omega doc">&nbsp;</div>
     </div>
-    <div class="grid_2 omega">&nbsp;</div>
 </div>
 </body>
 </html>
