--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,27 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Git Cheatsheet</title>
-    <link rel="stylesheet" href="stylesheets/1200.css" type="text/css"/>
-    <link rel="stylesheet" href="/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
+    <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
+    <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
     <!--<link rel="stylesheet" href="stylesheets/git-cheatsheet.css" type="text/css"/>-->
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.0/jquery.js' type='text/javascript'></script>
-    <script src='/javascripts/csster.js'></script>
-    <script src='/javascripts/styles.js'></script>
-    <script src='/javascripts/git-cheatsheet.js' type="text/javascript"></script>
+    <script src='git-cheatsheet/csster.js'></script>
+    <script src='git-cheatsheet/styles.js'></script>
+    <script src='git-cheatsheet/git-cheatsheet.js' type="text/javascript"></script>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-1458227-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+    
 </head>
 <body class="">
 <!-- stash workspace index local_repo remote_repo -->
@@ -16,9 +30,9 @@
     <h1 class="grid_8 alpha" data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
 
     <div class="grid_8 omega">
-        <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">visualization
+        <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">interaction
             from NDP Software</a></h2>
-        <h6>(c) Andrew Peterson 2009-2010 All Rights Reserved.</h6>
+        <h6>(c) Andrew Peterson 2009-2011 All Rights Reserved.</h6>
     </div>
 </div>
 <div class="clear"></div>
