--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
-<html>
-<head>
+<!DOCTYPE html>
+<html><head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Git Cheatsheet</title>
     <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
     <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
-    <!--<link rel="stylesheet" href="stylesheets/git-cheatsheet.css" type="text/css"/>-->
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.0/jquery.js' type='text/javascript'></script>
     <script src='git-cheatsheet/csster.js'></script>
     <script src='git-cheatsheet/styles.js'></script>
