--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,67 @@
 <!DOCTYPE html>
-<html><head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>Git Cheatsheet</title>
-    <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
-    <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
-    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.0/jquery.js' type='text/javascript'></script>
-    <script src='git-cheatsheet/csster.js'></script>
-    <script src='git-cheatsheet/styles.js'></script>
-    <script src='git-cheatsheet/git-cheatsheet.js' type="text/javascript"></script>
-    <script type="text/javascript">
+<html>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+  <title>Git Cheatsheet</title>
+  <meta name="description" content="Interactive Git Cheatsheet, categorizing commands based on what they affect.">
+  <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
+  <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
+  <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.0/jquery.js' type='text/javascript'></script>
+  <script src='git-cheatsheet/jquery.ba-hashchange.js'></script>
+  <script src='git-cheatsheet/csster.js'></script>
+  <script src='git-cheatsheet/styles.js'></script>
+  <script src='git-cheatsheet/git-cheatsheet.js' type="text/javascript"></script>
+  <script type="text/javascript">
 
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-1458227-1']);
-      _gaq.push(['_trackPageview']);
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-1458227-1']);
+    _gaq.push(['_trackPageview']);
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+    (function() {
+      var ga = document.createElement('script');
+      ga.type = 'text/javascript';
+      ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(ga, s);
+    })();
 
-    </script>
-    
+  </script>
+
 </head>
 <body class="">
-<!-- stash workspace index local_repo remote_repo -->
 <div id="hd" class="container_16">
-    <h1 class="grid_8 alpha" data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
+  <h1 class="grid_8 alpha" data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
 
-    <div class="grid_8 omega">
-        <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">interaction
-            from NDP Software</a></h2>
-        <h6>(c) Andrew Peterson 2009-2011 All Rights Reserved.</h6>
-    </div>
+  <div class="grid_8 omega">
+    <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">interaction
+      from NDP Software</a></h2>
+    <h6>(c) Andrew Peterson 2009-2011 All Rights Reserved.</h6>
+  </div>
 </div>
 <div class="clear"></div>
 <div id="diagram" class="container_16">
-    <div id="stash" class="loc grid_2 alpha"><label>stash</label></div>
-    <div id="workspace" class="loc grid_4"><label>workspace</label></div>
-    <div id="index" class="loc grid_3"
-         data-docs='The "index"-- or "staging area"-- holds a snapshot of the content of the working tree, and it is this snapshot that is taken as the contents of the next commit.'>
-        <label>index</label>
-    </div>
-    <div id="local_repo" class="loc grid_4"
-         data-docs="Typical branches: master, dev (for local development), feature_x, bugfix_y"
-            ><label>local repository</label>
-    </div>
-    <div id="remote_repo" class="loc grid_3 omega"
-         data-docs="Default is 'origin'. Typical branches here: master, shared_feature_x, release_y"
-            ><label>upstream repository</label>
-    </div>
-    <div id="commands">
-    </div>
-    <div class="clear"></div>
-    <div id="info">
-        <div class="grid_4 alpha cmd">&nbsp;</div>
-        <div class="grid_12 omega doc">&nbsp;</div>
-    </div>
+  <div id="stash" class="loc grid_2 alpha"><label>stash</label></div>
+  <div id="workspace" class="loc grid_4"><label>workspace</label></div>
+  <div id="index" class="loc grid_3"
+       data-docs='The "index"-- or "staging area"-- holds a snapshot of the content of the working tree, and it is this snapshot that is taken as the contents of the next commit.'>
+    <label>index</label>
+  </div>
+  <div id="local_repo" class="loc grid_4"
+       data-docs="Typical branches: master, dev (for local development), feature_x, bugfix_y"
+        ><label>local repository</label>
+  </div>
+  <div id="remote_repo" class="loc grid_3 omega"
+       data-docs="Default is 'origin'. Typical branches here: master, shared_feature_x, release_y"
+        ><label>upstream repository</label>
+  </div>
+  <div id="commands">
+  </div>
+  <div class="clear"></div>
+  <div id="info">
+    <div class="grid_4 alpha cmd">&nbsp;</div>
+    <div class="grid_12 omega doc">&nbsp;</div>
+  </div>
 </div>
 </body>
 </html>
