track events with google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <h1 class="grid_8 alpha" data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
 
   <div class="grid_8 omega">
-    <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">interaction
+    <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">an interaction
       from NDP Software</a></h2>
     <h6>(c) Andrew Peterson 2009-2011 All Rights Reserved.</h6>
   </div>
