--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -36,6 +36,7 @@
     <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">an interaction
       from NDP Software</a></h2>
     <h6>(c) Andrew Peterson 2009-2011 All Rights Reserved.</h6>
+    
   </div>
 </div>
 <div class="clear"></div>
@@ -61,6 +62,14 @@
     <div class="grid_4 alpha cmd">&nbsp;</div>
     <div class="grid_12 omega doc">&nbsp;</div>
   </div>
+  <div><g:plusone size="small" annotation="inline" width="120"></g:plusone></div>
 </div>
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
 </body>
 </html>
