Add documentation for stash and workspace

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -41,8 +41,10 @@
 </div>
 <div class="clear"></div>
 <div id="diagram" class="container_16">
-  <div id="stash" class="loc grid_2 alpha"><label>stash</label></div>
-  <div id="workspace" class="loc grid_4"><label>workspace</label></div>
+  <div id="stash" class="loc grid_2 alpha"
+       data-docs='A place to hide modifications while you work on something else'><label>stash</label></div>
+  <div id="workspace" class="loc grid_4"
+          data-docs='Local checkout'><label>workspace</label></div>
   <div id="index" class="loc grid_3"
        data-docs='The "index"-- or "staging area"-- holds a snapshot of the content of the working tree, and it is this snapshot that is taken as the contents of the next commit.'>
     <label>index</label>
