Restyle the bottom documentation area.

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -61,8 +61,9 @@
   </div>
   <div class="clear"></div>
   <div id="info">
-    <div class="grid_4 alpha cmd">&nbsp;</div>
-    <div class="grid_12 omega doc">&nbsp;</div>
+    <div class="screen"></div>
+    <div class="cmd">&nbsp;</div>
+    <div class="doc">&nbsp;</div>
   </div>
   <div><g:plusone size="small" annotation="inline" width="120"></g:plusone></div>
 </div>
