--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -9,6 +9,7 @@
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js' type='text/javascript'></script>
   <script src='git-cheatsheet/csster.js'></script>
   <script src='git-cheatsheet/styles.js'></script>
+  <script src='git-cheatsheet/commands.js'></script>
   <script src='git-cheatsheet/git-cheatsheet.js' type="text/javascript"></script>
   <script type="text/javascript">
 
@@ -31,12 +32,10 @@
 <body class="">
 <div id="hd" class="container_16">
   <h1 class="grid_8 alpha" data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
-
   <div class="grid_8 omega">
     <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">an interaction
       from NDP Software</a></h2>
     <h6>(c) Andrew Peterson 2009-2012 All Rights Reserved.</h6>
-    
   </div>
 </div>
 <div class="clear"></div>
