Add next/prev in array

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -10,6 +10,7 @@
   <script src='git-cheatsheet/csster.js'></script>
   <script src='git-cheatsheet/styles.js'></script>
   <script src='git-cheatsheet/commands.js'></script>
+  <script src='git-cheatsheet/base.js'></script>
   <script src='git-cheatsheet/git-cheatsheet.js' type="text/javascript"></script>
   <script type="text/javascript">
 
