--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
   <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js' type='text/javascript'></script>
-  <script src='git-cheatsheet/csster.js'></script>
-  <script src='git-cheatsheet/styles.js'></script>
+  <script src='git-cheatsheet/csster.js?v=2'></script>
+  <script src='git-cheatsheet/styles.js?v=2'></script>
   <script src='git-cheatsheet/commands.js'></script>
-  <script src='git-cheatsheet/base.js'></script>
-  <script src='git-cheatsheet/git-cheatsheet.js' type="text/javascript"></script>
+  <script src='git-cheatsheet/base.js?v=2'></script>
+  <script src='git-cheatsheet/git-cheatsheet.js?v=2' type="text/javascript"></script>
   <script type="text/javascript">
 
     var _gaq = _gaq || [];
