--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -19,6 +19,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <title>Git Cheatsheet</title>
   <meta name="description" content="Interactive Git Cheatsheet, categorizing commands based on what they affect.">
+  <meta name="keywords" content="Git Cheatsheet Cheat sheet Kuleta chuleta chivo machete torpedo acordeón cribsheet crib sheet antisèche Planquadratangabe Nachschlagewerk" />
   <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
   <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js' type='text/javascript'></script>
