--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -20,6 +20,7 @@
   <title>Git Cheatsheet</title>
   <meta name="description" content="Interactive Git Cheatsheet, categorizing commands based on what they affect.">
   <meta name="keywords" content="Git Cheatsheet Cheat sheet Kuleta chuleta chivo machete torpedo acordeón cribsheet crib sheet antisèche Planquadratangabe Nachschlagewerk" />
+  <link rel="author" href="https://plus.google.com/111325326458556506982/posts?rel=author">
   <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
   <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js' type='text/javascript'></script>
@@ -52,7 +53,9 @@
   <div class="grid_8 omega">
     <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">an interaction
       from NDP Software</a></h2>
-    <h6>(c) Andrew Peterson 2009-2012 All Rights Reserved.</h6>
+    <h6>(c) Andrew Peterson 2009-2013 All Rights Reserved.
+      <a href="https://plus.google.com/b/112580895511032559572/112580895511032559572/about?rel=author">Google+</a>
+    </h6>
     <script type="text/javascript">
       var p = /\?aw=([^\&]+)/.exec(document.location.search);
       p = p && p[1].replace(/%20/g, ' ') || 'Discover Your Character (entity)&nbsp;&mdash;&nbsp;Visit &amp;what&raquo;';
