--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -60,7 +60,7 @@
       var p = /\?aw=([^\&]+)/.exec(document.location.search);
       p = p && p[1].replace(/%20/g, ' ') || 'Discover Your Character (entity)&nbsp;&mdash;&nbsp;Visit &amp;what&raquo;';
       document.write("<h3>");
-      document.write('<a href="http://amp-what.com?utm_source=Git+Cheatsheet&utm_campaign=Text+Link+' +
+      document.write('<a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&utm_campaign=Text+Link+' +
               encodeURIComponent(p) +
               '&utm_medium=web" onclick="  _gaq.push([\'_trackEvent\', \'git-cheatsheet\', \'refer\', \'amp-what\', null])">');
       document.write(p);
