Make better title, updated from hash.

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -17,7 +17,7 @@
   <!-- End of Google Analytics Content Experiment code -->
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-  <title>Git Cheatsheet</title>
+  <title>Git Cheatsheet • NDP Software</title>
   <meta name="description" content="Interactive Git Cheatsheet, categorizing commands based on what they affect.">
   <meta name="keywords" content="Git Cheatsheet Cheat sheet Kuleta chuleta chivo machete torpedo acordeón cribsheet crib sheet antisèche Planquadratangabe Nachschlagewerk" />
   <link rel="author" href="https://plus.google.com/111325326458556506982/posts?rel=author">
