--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -76,15 +76,15 @@
   <div id="workspace" class="loc grid_4"
           data-docs='Local checkout'><label>workspace</label></div>
   <div id="index" class="loc grid_3"
-       data-docs='The "index"-- or "staging area"-- holds a snapshot of the content of the working tree, and it is this snapshot that is taken as the contents of the next commit.'>
+       data-docs='The index (or "staging area) holds a snapshot of the content of the working tree. This snapshot is taken as the contents of the next commit.'>
     <label>index</label>
   </div>
   <div id="local_repo" class="loc grid_4"
-       data-docs="Typical branches: master, dev (for local development), feature_x, bugfix_y"
+       data-docs="A subdirectory named .git that contains all of your necessary repository files — a Git repository skeleton. Typical branches: <b>master</b>, <b>feature-x</b>, <b>bugfix-y</b>"
         ><label>local repository</label>
   </div>
   <div id="remote_repo" class="loc grid_3 omega"
-       data-docs="Default is 'origin'. Typical branches here: master, shared_feature_x, release_y"
+       data-docs="Version(s) of your project that are hosted on the Internet or network, ensuring all your changes are available for other developers. Default is 'origin'. Typical branches here: <b>master</b>, <b>shared-feature-x</b>, <b>release-y</b>"
         ><label>upstream repository</label>
   </div>
   <div id="commands">
