French translation good to go.

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="../git-cheatsheet/csster.js"></script>
   <script type="text/javascript" src="../git-cheatsheet/styles.js"></script>
   <script type="text/javascript" src="../git-cheatsheet/base.js"></script>
+  <script type="text/javascript" src="../git-cheatsheet/cookies.js"></script>
   <!--<script type="text/javascript" src="../git-cheatsheet/git-cheatsheet.js"></script>-->
 
   <!-- include spec files here... -->
