--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -19,13 +19,15 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <title>Git Cheatsheet • NDP Software</title>
   <meta name="description" content="Interactive Git Cheatsheet, categorizing commands based on what they affect.">
-  <meta name="keywords" content="Git Cheatsheet Cheat sheet Kuleta chuleta chivo machete torpedo acordeón cribsheet crib sheet antisèche Planquadratangabe Nachschlagewerk" />
+  <meta name="keywords"
+        content="Git Cheatsheet Cheat sheet Kuleta chuleta chivo machete torpedo acordeón cribsheet crib sheet antisèche Planquadratangabe Nachschlagewerk"/>
   <link rel="author" href="https://plus.google.com/111325326458556506982/posts?rel=author">
   <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
   <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js' type='text/javascript'></script>
   <script src='git-cheatsheet/csster.js?v=2'></script>
   <script src='git-cheatsheet/styles.js?v=2'></script>
+  <script src='git-cheatsheet/cookies.js'></script>
   <script src='git-cheatsheet/commands.js'></script>
   <script src='git-cheatsheet/base.js?v=2'></script>
   <script src='git-cheatsheet/git-cheatsheet.js?v=2' type="text/javascript"></script>
@@ -35,7 +37,7 @@
     _gaq.push(['_setAccount', 'UA-1458227-1']);
     _gaq.push(['_trackPageview']);
 
-    (function() {
+    (function () {
       var ga = document.createElement('script');
       ga.type = 'text/javascript';
       ga.async = true;
@@ -49,43 +51,41 @@
 </head>
 <body class="">
 <div id="hd" class="container_16">
-  <h1 class="grid_8 alpha" data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
+  <div class="grid_8 alpha">
+    <h1 data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
+    <h4>
+      <a class="lang" data-lang="en">en</a>
+      <a class="lang" data-lang="fr" data-docs="French translation by Bernard Opic">fr</a>
+    </h4>
+  </div>
+
   <div class="grid_8 omega">
-    <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">an interaction
+    <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">an
+      interaction
       from NDP Software</a></h2>
     <h6>(c) Andrew Peterson 2009-2013 All Rights Reserved.
       <a href="https://plus.google.com/b/112580895511032559572/112580895511032559572/about?rel=author">Google+</a>
     </h6>
-    <script type="text/javascript">
-      var p = /\?aw=([^\&]+)/.exec(document.location.search);
-      p = p && p[1].replace(/%20/g, ' ') || 'Discover Your Character (entity)&nbsp;&mdash;&nbsp;Visit &amp;what&raquo;';
-      document.write("<h3>");
-      document.write('<a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&utm_campaign=Text+Link+' +
-              encodeURIComponent(p) +
-              '&utm_medium=web" onclick="  _gaq.push([\'_trackEvent\', \'git-cheatsheet\', \'refer\', \'amp-what\', null])">');
-      document.write(p);
-      document.write('</a>');
-      document.write("</h3>");
-    </script>
+
+
+    <h3>
+      <a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&amp;utm_campaign=Text+Link+Discover%20Your%20Character%20(entity)%26nbsp%3B%26mdash%3B%26nbsp%3BVisit%20%26amp%3Bwhat%26raquo%3B&amp;utm_medium=web"
+         onclick="  _gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'amp-what', null])">Visit &amp;what»</a></h3>
   </div>
 </div>
 <div class="clear"></div>
 <div id="diagram" class="container_16">
-  <div id="stash" class="loc grid_2 alpha"
-       data-docs='A place to hide modifications while you work on something else'><label>stash</label></div>
+  <div id="stash" class="loc grid_2 alpha"><label>stash</label></div>
   <div id="workspace" class="loc grid_4"
-          data-docs='Local checkout'><label>workspace</label></div>
-  <div id="index" class="loc grid_3"
-       data-docs='The index (or "staging area) holds a snapshot of the content of the working tree. This snapshot is taken as the contents of the next commit.'>
+       data-docs='Local checkout'><label>workspace</label></div>
+  <div id="index" class="loc grid_3">
     <label>index</label>
   </div>
   <div id="local_repo" class="loc grid_4"
-       data-docs="A subdirectory named .git that contains all of your necessary repository files — a Git repository skeleton. Typical branches: <b>master</b>, <b>feature-x</b>, <b>bugfix-y</b>"
-        ><label>local repository</label>
+          ><label>local repository</label>
   </div>
   <div id="remote_repo" class="loc grid_3 omega"
-       data-docs="Version(s) of your project that are hosted on the Internet or network, ensuring all your changes are available for other developers. Default is 'origin'. Typical branches here: <b>master</b>, <b>shared-feature-x</b>, <b>release-y</b>"
-        ><label>upstream repository</label>
+          ><label>upstream repository</label>
   </div>
   <div id="commands">
   </div>
@@ -94,13 +94,18 @@
     <div class="cmd">&nbsp;</div>
     <div class="doc">&nbsp;</div>
   </div>
-  <div><g:plusone size="small" annotation="inline" width="120"></g:plusone></div>
+  <div>
+    <g:plusone size="small" annotation="inline" width="120"></g:plusone>
+  </div>
 </div>
 <script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+  (function () {
+    var po = document.createElement('script');
+    po.type = 'text/javascript';
+    po.async = true;
     po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(po, s);
   })();
 </script>
 </body>
