--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -63,8 +63,8 @@
     <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">an
       interaction
       from NDP Software</a></h2>
-    <h6>(c) Andrew Peterson 2009-2013 All Rights Reserved.
-      <a href="https://plus.google.com/b/112580895511032559572/112580895511032559572/about?rel=author">Google+</a>
+    <h6>(c) <a href="https://plus.google.com/b/112580895511032559572/112580895511032559572/about?rel=author">Andrew Peterson</a> 2009-2013 All Rights Reserved.
+      French translation by <a href="http://blogs.media-tips.com/bernard.opic/">Bernard Opic</a>
     </h6>
 
 
