Minor code cleanup

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -18,7 +18,8 @@
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <title>Git Cheatsheet • NDP Software</title>
-  <meta name="description" content="Interactive Git Cheatsheet, categorizing commands based on what they affect.">
+  <meta name="description"
+        content="Interactive Git Cheatsheet, categorizing commands based on what they affect.">
   <meta name="keywords"
         content="Git Cheatsheet Cheat sheet Kuleta chuleta chivo machete torpedo acordeón cribsheet crib sheet antisèche Planquadratangabe Nachschlagewerk"/>
   <link rel="author" href="https://plus.google.com/111325326458556506982/posts?rel=author">
@@ -47,9 +48,9 @@
     })();
 
   </script>
-
 </head>
-<body class="">
+
+<body>
 <div id="hd" class="container_16">
   <div class="grid_8 alpha">
     <h1 data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
@@ -66,8 +67,6 @@
     <h6>(c) <a href="https://plus.google.com/b/112580895511032559572/112580895511032559572/about?rel=author">Andrew Peterson</a> 2009-2013 All Rights Reserved.
       French translation by <a href="http://blogs.media-tips.com/bernard.opic/">Bernard Opic</a>
     </h6>
-
-
     <h3>
       <a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&amp;utm_campaign=Text+Link+Discover%20Your%20Character%20(entity)%26nbsp%3B%26mdash%3B%26nbsp%3BVisit%20%26amp%3Bwhat%26raquo%3B&amp;utm_medium=web"
          onclick="  _gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'amp-what', null])">Visit &amp;what»</a></h3>
@@ -76,19 +75,11 @@
 <div class="clear"></div>
 <div id="diagram" class="container_16">
   <div id="stash" class="loc grid_2 alpha"><label>stash</label></div>
-  <div id="workspace" class="loc grid_4"
-       data-docs='Local checkout'><label>workspace</label></div>
-  <div id="index" class="loc grid_3">
-    <label>index</label>
-  </div>
-  <div id="local_repo" class="loc grid_4"
-          ><label>local repository</label>
-  </div>
-  <div id="remote_repo" class="loc grid_3 omega"
-          ><label>upstream repository</label>
-  </div>
-  <div id="commands">
-  </div>
+  <div id="workspace" class="loc grid_4"><label>workspace</label></div>
+  <div id="index" class="loc grid_3"><label>index</label></div>
+  <div id="local_repo" class="loc grid_4"><label>local repository</label></div>
+  <div id="remote_repo" class="loc grid_3 omega"><label>upstream repository</label></div>
+  <div id="commands"></div>
   <div id="info">
     <div class="screen"></div>
     <div class="cmd">&nbsp;</div>
