Use h5s instead of labels

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -74,11 +74,11 @@
 </div>
 <div class="clear"></div>
 <div id="diagram" class="container_16">
-  <div id="stash" class="loc grid_2 alpha"><label>stash</label></div>
-  <div id="workspace" class="loc grid_4"><label>workspace</label></div>
-  <div id="index" class="loc grid_3"><label>index</label></div>
-  <div id="local_repo" class="loc grid_4"><label>local repository</label></div>
-  <div id="remote_repo" class="loc grid_3 omega"><label>upstream repository</label></div>
+  <dl id="stash" class="loc grid_2 alpha"><h5>stash</h5></dl>
+  <dl id="workspace" class="loc grid_4"><h5>workspace</h5></dl>
+  <dl id="index" class="loc grid_3"><h5>index</h5></dl>
+  <dl id="local_repo" class="loc grid_4"><h5>local repository</h5></dl>
+  <dl id="remote_repo" class="loc grid_3 omega"><h5>upstream repository</h5></dl>
   <div id="commands"></div>
   <div id="info">
     <div class="screen"></div>
