Use sections instead of dls for locations.

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -74,12 +74,12 @@
 </div>
 <div class="clear"></div>
 <div id="diagram" class="container_16">
-  <dl id="stash" class="loc grid_2 alpha"><h5>stash</h5></dl>
-  <dl id="workspace" class="loc grid_4"><h5>workspace</h5></dl>
-  <dl id="index" class="loc grid_3"><h5>index</h5></dl>
-  <dl id="local_repo" class="loc grid_4"><h5>local repository</h5></dl>
-  <dl id="remote_repo" class="loc grid_3 omega"><h5>upstream repository</h5></dl>
   <div id="commands"></div>
+  <section id="stash" class="loc grid_2 alpha"><h5>stash</h5></section>
+  <section id="workspace" class="loc grid_4"><h5>workspace</h5></section>
+  <section id="index" class="loc grid_3"><h5>index</h5></section>
+  <section id="local_repo" class="loc grid_4"><h5>local repository</h5></section>
+  <section id="remote_repo" class="loc grid_3 omega"><h5>upstream repository</h5></section>
   <div id="info">
     <div class="screen"></div>
     <div class="cmd">&nbsp;</div>
